--- a/dashboard.html
+++ b/dashboard.html
@@ -13,137 +13,33 @@
   <style>
     :root { --navy: #1a305e; --blue: #4477ce; }
     body { margin: 0; font-family: sans-serif; height: 100vh; display: flex; flex-direction: column; overflow: hidden; }
-    .topbar { background: var(--navy); color: white; padding: 15px 25px; display: flex; justify-content: space-between; align-items: center; z-index: 2000; }
+    .topbar { background: var(--navy); color: white; padding: 12px 20px; display: flex; justify-content: space-between; align-items: center; z-index: 2000; }
     #layout { display: flex; flex: 1; min-height: 0; }
-    #sidebar { width: 360px; background: #f8f9fa; border-right: 1px solid #ddd; padding: 20px; overflow-y: auto; box-sizing: border-box; }
+    #sidebar { width: 340px; background: #f8f9fa; border-right: 1px solid #ddd; padding: 15px; overflow-y: auto; box-sizing: border-box; }
     #main { flex: 1; display: flex; flex-direction: column; }
     #map { height: 45%; border-bottom: 1px solid #ddd; }
-    #chart-box { height: 55%; padding: 20px; background: white; box-sizing: border-box; }
-    .card { background: white; padding: 15px; border-radius: 8px; border: 1px solid #ddd; margin-bottom: 15px; }
-    button { width: 100%; padding: 12px; background: var(--blue); color: white; border: none; border-radius: 4px; font-weight: bold; cursor: pointer; }
-    .aqi-val { font-size: 64px; font-weight: 900; text-align: center; display: block; line-height: 1; margin: 10px 0; text-shadow: 1px 1px 0 #000, -1px -1px 0 #000; }
-    .legend-item { display: flex; align-items: center; margin-bottom: 6px; font-size: 12px; font-weight: bold; }
-    .dot { width: 12px; height: 12px; border-radius: 50%; margin-right: 10px; border: 1px solid #333; }
-    .tri { width: 0; height: 0; border-left: 7px solid transparent; border-right: 7px solid transparent; border-bottom: 12px solid #f59e0b; margin-right: 10px; }
+    #chart-box { height: 55%; padding: 15px; background: white; box-sizing: border-box; }
+    .card { background: white; padding: 15px; border-radius: 8px; border: 1px solid #ddd; margin-bottom: 12px; }
+    button { width: 100%; padding: 10px; background: var(--blue); color: white; border: none; border-radius: 4px; font-weight: bold; cursor: pointer; }
+    .aqi-val { font-size: 56px; font-weight: 900; text-align: center; display: block; line-height: 1; margin: 5px 0; text-shadow: 1px 1px 0 #000; }
+    .legend-item { display: flex; align-items: center; margin-bottom: 4px; font-size: 11px; font-weight: bold; }
+    .dot { width: 10px; height: 10px; border-radius: 50%; margin-right: 8px; border: 1px solid #333; }
   </style>
 </head>
 <body>
 
 <div class="topbar">
-  <div>Cheverly EJAT Network</div>
-  <nav><a href="index.html" style="color:white; text-decoration:none;">Home</a></nav>
+  <div style="font-weight:bold;">Cheverly EJAT Network</div>
+  <nav><a href="index.html" style="color:white; text-decoration:none; font-size:0.8rem;">Home</a></nav>
 </div>
 
 <div id="layout">
   <aside id="sidebar">
     <div class="card">
-      <label style="font-size:0.7rem; font-weight:bold; color:#666;">ADDRESS SEARCH</label>
-      <input type="text" id="addrInput" placeholder="Enter address..." style="width:100%; padding:10px; margin:8px 0;">
-      <button onclick="findAddress()">Find Station</button>
+      <label style="font-size:0.7rem; font-weight:bold; color:#666;">SEARCH ADDRESS</label>
+      <input type="text" id="addrInput" placeholder="Street name..." style="width:100%; padding:8px; margin:5px 0;">
+      <button onclick="findAddress()">Locate</button>
     </div>
     <div class="card">
-      <label style="font-size:0.7rem; font-weight:bold; color:#666;">STATION SELECT</label>
-      <select id="devSel" onchange="handleSelect(this.value)" style="width:100%; padding:10px; margin-top:8px;"></select>
-    </div>
-    <div class="card" style="text-align:center;">
-      <div id="aqiDisplay" class="aqi-val" style="color:#ccc;">--</div>
-      <div style="font-size:0.7rem; font-weight:bold; color:#555;">CUMULATIVE CE-AQI</div>
-      <div style="margin-top:15px; text-align:left;">
-        <div class="legend-item"><span class="dot" style="background:#00e400"></span> Good</div>
-        <div class="legend-item"><span class="dot" style="background:#ffff00"></span> Moderate</div>
-        <div class="legend-item"><span class="dot" style="background:#ff7e00"></span> Sensitive</div>
-        <div class="legend-item"><span class="dot" style="background:#ff0000"></span> Unhealthy</div>
-        <div class="legend-item"><span class="tri"></span> SPOD Gas Sensor</div>
-      </div>
-    </div>
-  </aside>
-
-  <main id="main">
-    <div id="map"></div>
-    <div id="chart-box"><canvas id="airChart"></canvas></div>
-  </main>
-</div>
-
-<script>
-  const API_KEY = "9ADB5C6C-A9B0-11EF-A261-42010A80000F";
-  const DC_REF = "175563";
-  // Rotates proxies that allow URL-based keys
-  const PROXIES = ["https://api.allorigins.win/raw?url=", "https://corsproxy.io/?"];
-  let pIdx = 0;
-
-  const SENSORS = { "284362": "EJAT.PG.1.284362", "52823": "EJAT.CV.6.52823", "53677": "EJAT.CV.1.53677", "54239": "EJAT.CV.6.54239", "54293": "EJAT.CV.2.54293", "57777": "EJAT.CV.1.57777", "57783": "EJAT.CV.6.57783", "57811": "EJAT.CV.4.57811", "57841": "EJAT.CV.3.57841", "57955": "EJAT.FH.1.57955", "160037": "EJAT.PG.1.160037", "175563": "EJAT.PG.1.175563", "178169": "EJAT.PG.1.178169", "181253": "EJAT.CH.1.181253", "184191": "EJAT.PG.1.184191", "185085": "EJAT.FH.1.185085", "197937": "EJAT.PG.1.197937", "203577": "EJAT.CV.2.203577", "203597": "EJAT.FH.1.203597", "203601": "EJAT.CV.1.203601", "207729": "EJAT.CV.1.207729", "211993": "EJAT.CV.3.211993", "218227": "EJAT.PG.1.218227", "218237": "EJAT.PG.1.218237", "218273": "EJAT.PG.1.218273" };
-
-  let markers = {}, searchMarker = null;
-  const map = L.map('map').setView([38.923, -76.915], 14);
-  L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
-
-  const chart = new Chart(document.getElementById('airChart').getContext('2d'), {
-    type: 'line',
-    data: { datasets: [{ label: 'Local Station', data: [], borderColor: '#4477ce', tension: 0.2, fill: true, backgroundColor: 'rgba(68, 119, 206, 0.1)' }, { label: 'DC City Avg', data: [], borderColor: 'red', borderDash: [5,5], tension: 0.2, fill: false }]},
-    options: { responsive: true, maintainAspectRatio: false, scales: { x: { type: 'time' }, y: { beginAtZero: true } } }
-  });
-
-  async function call(endpoint) {
-    // PASS KEY IN URL TO PREVENT CORS BLOCK
-    const finalUrl = `${endpoint}${endpoint.includes('?') ? '&' : '?'}api_key=${API_KEY}`;
-    for (let i = 0; i < PROXIES.length; i++) {
-      try {
-        const r = await fetch(`${PROXIES[pIdx]}${encodeURIComponent(finalUrl)}`);
-        if (r.ok) return await r.json();
-      } catch (e) { pIdx = (pIdx + 1) % PROXIES.length; }
-    }
-    return null;
-  }
-
-  function toAQI(pm) {
-    if (!pm || pm < 0) return 0;
-    return pm <= 12 ? Math.round(pm * 4.16) : pm <= 35.4 ? Math.round(2.1*(pm-12)+51) : Math.round(pm + 100);
-  }
-
-  async function refresh(id) {
-    const start = Math.floor(Date.now()/1000) - 86400;
-    const [loc, dc] = await Promise.all([
-      call(`https://api.purpleair.com/v1/sensors/${id}/history?fields=pm2.5_atm&average=60&start_timestamp=${start}`),
-      call(`https://api.purpleair.com/v1/sensors/${DC_REF}/history?fields=pm2.5_atm&average=60&start_timestamp=${start}`)
-    ]);
-    if (loc && loc.data) {
-      const parsed = loc.data.map(r => ({ x: r[0]*1000, y: toAQI(r[1]) }));
-      chart.data.datasets[0].data = parsed;
-      const latest = parsed.slice(-1)[0]?.y || 0;
-      document.getElementById('aqiDisplay').innerText = latest;
-      document.getElementById('aqiDisplay').style.color = latest <= 50 ? "#00e400" : latest <= 100 ? "#ffff00" : "#ff7e00";
-    }
-    if (dc && dc.data) chart.data.datasets[1].data = dc.data.map(r => ({ x: r[0]*1000, y: toAQI(r[1]) }));
-    chart.update();
-  }
-
-  async function init() {
-    const sel = document.getElementById('devSel');
-    const res = await call("https://api.purpleair.com/v1/sensors?nwlng=-77.15&nwlat=39.05&selng=-76.75&selat=38.75&fields=sensor_index,latitude,longitude,pm2.5_atm");
-    if (res && res.data) {
-      res.data.forEach(r => {
-        const id = String(r[0]);
-        if (SENSORS[id]) {
-          const m = L.circleMarker([r[1], r[2]], { radius: 10, fillColor: "#00e400", color: "#000", weight: 2, fillOpacity: 0.9 }).addTo(map);
-          markers[id] = m; sel.add(new Option(SENSORS[id], id));
-          m.on('click', () => { sel.value = id; refresh(id); });
-        }
-      });
-    }
-    refresh("203577");
-  }
-  init();
-
-  async function findAddress() {
-    const q = document.getElementById('addrInput').value;
-    const r = await fetch(`https://nominatim.openstreetmap.org/search?format=json&q=${encodeURIComponent(q + ", Cheverly, MD")}`);
-    const d = await r.json();
-    if (d.length > 0) {
-      if (searchMarker) map.removeLayer(searchMarker);
-      searchMarker = L.circleMarker([d[0].lat, d[0].lon], { radius: 10, color: 'red', fillColor: 'white', fillOpacity: 1, weight: 3 }).addTo(map);
-      map.flyTo([d[0].lat, d[0].lon], 16);
-    }
-  }
-</script>
-</body>
-</html>
+      <label style="font-size:0.7rem; font-weight:bold; color:#666;">SELECT STATION</label>
+      <select id="dev
